--- a/style.css
+++ b/style.css
@@ -3,3 +3,22 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header{
+  text-align: center;
+}
+
+section{
+  text-align: center;
+
+}
+nav.a{
+  padding-left: 10px;
+  padding-right: 10px;
+  color: brown;
+
+}
+
+#detail.div{
+  float: left;
+}
